# agentic-rag-kubeflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
data/sample/: agentic_rag_overview.md
docs/: golden-data-standard.md  index.md  llm-deployment.md  local-kubeflow-setup.md
infra/k8s/: chroma.yaml  namespace.yaml
infra/kserve/: inference-service.yaml  llm-inferenceservice.yaml  secrets.yaml
infra/terraform/: main.tf  terraform.tfvars.example
notebooks/: retrieval_example.ipynb
pipelines/: __init__.py  ingestion_pipeline.py  rag_pipeline.py
pipelines/compiled/: .gitkeep  ingestion_pipeline.yaml
pipelines/components/: __init__.py  chunk.py  embed.py  evaluate.py  fetch.py  ingest.py  store.py
src/agentic_rag/: __init__.py  config.py
src/agentic_rag/agent/: ARCHITECTURE.md  SAMPLE_CONVERSATIONS.md  __init__.py  graph.py  llm.py  nodes.py  prompts.py  state.py  tools.py
src/agentic_rag/ingestion/: __init__.py  chunker.py  embedder.py  loader.py
src/agentic_rag/retrieval/: __init__.py  base.py  chroma_store.py  models.py  reranker.py  retriever.py
src/agentic_rag/serving/: __init__.py  app.py  kserve_runtime.py
tests/: __init__.py  conftest.py
tests/integration/: .gitkeep
tests/unit/: test_agent.py  test_chunker.py  test_ingestion_components.py  test_retrieval.py  test_serving.py
