[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rag-kubeflow"
version = "0.1.0"
description = "Agentic RAG on Kubeflow — modular retrieval-augmented generation with autonomous agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Tilak Gupta" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.2,<1",
    "langgraph>=0.1,<1",
    "langchain-openai>=0.1,<1",
    "chromadb>=0.5,<1",
    "sentence-transformers>=3,<4",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
kfp = [
    "kfp>=2.7,<3",
]
serving = [
    "kserve>=0.12,<1",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3,<4",
]
docs = [
    "mkdocs-material>=9,<10",
    "mkdocstrings[python]>=0.25,<1",
]

[project.urls]
Homepage = "https://github.com/tilakgupta/agentic-rag-kubeflow"
Repository = "https://github.com/tilakgupta/agentic-rag-kubeflow"
Issues = "https://github.com/tilakgupta/agentic-rag-kubeflow/issues"

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["agentic_rag"]

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src/agentic_rag --cov-report=term-missing"
